fix some questions overlapping the header

--- a/src/main/resources/scss/debris/_course-assessment.scss
+++ b/src/main/resources/scss/debris/_course-assessment.scss
@@ -1631,7 +1631,9 @@ canvas.x-component-course-assessment {
 .assignment-reader, .course-assessment-header {
 	.component-overlay {
 		& > .x-panel {
-			z-index: 1;
+			.x-docked {
+				z-index: unset;
+			}
 		}
 	}
 
